# flame-api-public

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  fabfile.py  pyproject.toml
admin/: package-lock.json  package.json
admin/src/: App.vue  main.js
admin/src/components/: Authorization.vue  Progress.vue
admin/src/components/Dish/: AddDishForm.vue  DishTable.vue
admin/src/components/Food/: FoodTable.vue
admin/src/router/: index.js
admin/src/store/: index.js
admin/src/store/modules/: common.js  dishes.js  foods.js  users.js
admin/src/views/: Foods.vue  FoodsByTypes.vue  Home.vue
admin/src/views/editor/: EditorMain.vue
admin/src/views/editor/dishes/: DishMain.vue
app/: main.py
app/api/: routes.py
app/api/endpoints/: auth.py  dish.py  food.py  meal.py  user.py  user_details.py
app/core/: config.py  jwt.py
app/crud/: dish.py  food.py  meal.py  user.py  user_details.py
app/db/: firebase.py  mongodb.py
app/models/: dbmodel.py  dish.py  food.py  food_types.py  meal.py  token.py  user.py  user_details.py
deployment/: fabfile.py
fbclient/: app.py  index.html
parser/: dbupload.py  foods.txt  main.py  requirements.txt
